# learn-rust-backend

./: .env  Cargo.toml  README.md  docker-compose.yaml
docs/part1/: README.md
docs/part2/: README.md
entity/: Cargo.toml
entity/src/: conversation.rs  file_msg.rs  group.rs  message.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  user.rs  user_group.rs
migration/src/: lib.rs  m20240520_104423_create_user.rs  m20240520_104447_create_group.rs  m20240520_104508_create_message.rs  m20240520_104520_create_file_msg.rs  m20240520_104527_create_conversation.rs  m20240520_111859_create_uuid_extension.rs  m20240521_123300_create_user_group.rs
src/: error.rs  main.rs  router.rs
src/enums/: routes.rs
src/features/: mod.rs
src/features/auth/: handler.rs  middleware.rs  mod.rs  model.rs  routes.rs
src/features/chat/: handler.rs  mod.rs  model.rs  routes.rs  service.rs
src/features/group/: handler.rs  model.rs  routes.rs
src/features/users/: handler.rs  model.rs  routes.rs
src/socket/: handler.rs  mod.rs  model.rs
src/utils/: jwt.rs
